# GammaE

./: .gitattributes  .gitignore  .gitmodules  README.md  repoinit.bat  repoupdate.bat
GammaE/: GammaE.h  common.lua  gen_solution.bat  gen_solution_vs2022.bat  generate_projects.lua  include_projects.lua
GammaE/Collision/: GammaE_Collision.cpp  GammaE_Collision.h
GammaE/E3D/: CMakeLists.txt  E3D.vcxproj.filters  GammaE_E3D.cat  GammaE_E3D.h  GammaE_E3D.ptl  eE3D_FogMode.cpp  eE3D_RenderBuffer_Type.h  eE3D_ZTestFunc.cpp  premake5.lua
GammaE/E3D/BoundingVolume/: CBoundingCylinder.cpp
GammaE/E3D/BoundingVolume/GraphBoundVol/: CGraphBV.h  CGraphBV_Sphere.cpp  CGraphBV_Sphere.h
GammaE/E3D/BoundingVolume/GraphBoundVol/GraphBVUtils/: CGraphBV_FileIO.cpp
GammaE/E3D/CompiledMesh/: CCompiledMesh.h
GammaE/E3D/Drivers/OGL/: CE3D_OGL_Win_Renderer.cpp
GammaE/E3D/Materials/: ColorObj.h  MipMapWH.cpp  MipMapWH.h
GammaE/E3D/Mesh/: CMesh.cpp  CMesh_Box.cpp
GammaE/E3D/Mesh/MeshUtils/: MESHUt_BuildNIMesh.cpp  TransformMesh.cpp  TransformMesh.h
GammaE/E3D/Shaders/ShaderDefWarehouse/: CE3D_ShaderDefWH.h
GammaE/E3D/Shaders/ShaderInstructions/: CE3D_ShIns_Wireframe.h
GammaE/E3D/Shaders/ShaderParser/: CE3D_ShaderParser.cpp
GammaE/E3D/Shaders/ShaderUtils/: CE3D_ShaderUtils.cpp
GammaE/E3D/Shaders/ShaderWarehouse/: CE3D_ShaderWH.cpp
GammaE/E3D/Viewing/Viewport/: CE3D_Viewport.cpp
GammaE/FileSys/: GammaE_FileSys.cpp  premake5.lua
GammaE/Math/: GammaE_Math.h  MMath.cpp  MMath.h  premake5.lua
GammaE/Memory/: MMgr.cpp  MMgr.h  premake5.lua
GammaE/Misc/: GammaE_Misc.h  premake5.lua
GammaE/Scene/: CObject3D.cpp  CObject3D.h  CObject3D_Camera.cpp  CObject3D_Camera.h  CObject3D_Leaf.cpp  CObject3D_Mux.h  CObject3D_Node.cpp  CObject3D_Transf.cpp  GammaE_Scene.cpp  GammaE_Scene.h  premake5.lua
Orion/: AppGlobals.cpp  AppGlobals.h  AppLoop.cpp  AppLoop.h  Premake5.lua  Screenshot.tga  main.cpp
ProjectR/: premake5.lua  readme.md
ProjectS/: gen_solution_vs2022.bat  premake5.lua  readme.md
SampleApp/: ApplicationLoop.cpp  ApplicationLoop.h  History.txt  OldShaders.txt  Premake5.lua  TODO.txt  WinEventTranslator.cpp  main.cpp  proctex.cpp  readme.md  run.bat  shaders.txt
repoimgs/: Screenshot1.tga  Screenshot2.tga  Screenshot3.tga  Screenshot4.tga  Screenshot5.tga  Screenshot6.tga
(+2666 files in other folders)
